# ScientificComputingProj

./: AbstractProb.cpp  AbstractProb.h  CMakeLists.txt  Prob1.cpp  Prob1.h  Prob2.cpp  Prob2.h  Prob3.cpp  Prob3.h  Prob4.cpp  Prob4.h  Prob5.cpp  Prob5.h  Prob6.cpp  Prob6.h  main.cpp
